# rust-svelte-todo

./: Cargo.toml  Dockerfile  docker-compose.yml  example.json  openapi.json  todo
back-end/: Cargo.toml
back-end/migrations/: 0004_create_admin_finance_plan_entries.sql  0005_create_admin_billing_entries.sql  0006_create_admin_finance_tenant_notes.sql  0007_add_unique_tenant_note.sql  0008_add_price_to_tenant_notes.sql
back-end/src/: auth.rs  config.rs  error.rs  main.rs  models.rs
back-end/src/db/: billing.rs  finance_plan.rs  mod.rs  tenant_notes.rs
back-end/src/mongo/: mod.rs  tenants.rs
back-end/src/routes/: billing.rs  finance_plan.rs  mod.rs  tenant_notes.rs  tenants.rs  users.rs
front-end/: README.md  components.json  eslint.config.js  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
front-end/src/lib/api/: mutator.ts
front-end/src/lib/components/: AppSidebar.svelte  Navbar.svelte  SiteHeader.svelte
front-end/src/lib/components/ui/context-menu/: context-menu-content.svelte  context-menu-sub-content.svelte
front-end/src/lib/components/ui/sidebar/: sidebar.svelte
front-end/src/routes/: +layout.svelte  +page.svelte  layout.css
front-end/src/routes/(app)/: +layout.svelte  +page.svelte
front-end/src/routes/(app)/finances/billing/: +page.svelte  billing.utils.ts
front-end/src/routes/(app)/finances/billing/components/: AddEntryDialog.svelte  BillingRow.svelte  BillingTable.svelte  DeleteEntryDialog.svelte  EditEntryDialog.svelte
front-end/src/routes/(app)/finances/overview/: +page.svelte
front-end/src/routes/(app)/finances/plan/: +page.svelte  plan.utils.ts
front-end/src/routes/(app)/finances/plan/components/: AddEntryDialog.svelte  DeleteEntryDialog.svelte  EditEntryDialog.svelte  IncomeChart.svelte  PlanRow.svelte  PlanTable.svelte
front-end/src/routes/(app)/tenants/: +page.svelte
front-end/src/routes/(app)/tenants/[id]/: +page.svelte
front-end/src/routes/(app)/users/: +page.svelte
front-end/src/routes/(app)/users/components/: DeleteUserDialog.svelte  EditUserDialog.svelte  UserRow.svelte  UsersTable.svelte
front-end/src/routes/(auth)/auth/signin/: +page.svelte
front-end/src/routes/auth/signin/: +page.svelte
migrations/: 0002_create_users.sql
src/: auth.rs  main.rs  models.rs
src/routes/: todos.rs  users.rs
